--- a/archives/2021-01-26.md
+++ b/archives/2021-01-26.md
@@ -1,55 +1,61 @@
 # 2021-01-26
 
-共 107 条
+共 111 条
 
 <!-- BEGIN -->
-<!-- 最后更新时间 Tue Jan 26 2021 10:20:08 GMT+0800 (CST) -->
+<!-- 最后更新时间 Tue Jan 26 2021 11:07:20 GMT+0800 (CST) -->
 1. [中科院道德委员会侯兴宇处长发文称「重复实验在生命科学中并不一定可靠」，你认同吗？](https://www.zhihu.com/question/441079956)
 1. [如何看待裴钢院士正式回应：请提供举报学术不端的实质证据?](https://www.zhihu.com/question/441180206)
-1. [近期疑似多只猫咪吃「go 九种肉」猫粮后死亡或生病，出问题的批次有哪些？猫咪主人能否索赔？](https://www.zhihu.com/question/380058906)
-1. [南宁一女子 5 天吃 6 斤车厘子中毒，一夜「血便」 20 多次，吃车厘子过量有什么危险？](https://www.zhihu.com/question/441061857)
 1. [我献了400毫升血被我妈知道了，狠骂了我一顿，我想知道女生献血到底会不会对身体造成伤害？](https://www.zhihu.com/question/433360504)
-1. [BBC 发布武汉一年前和现在对比视频，网友：为什么故意拍的这么破败。对此，你怎么看?](https://www.zhihu.com/question/440241502)
 1. [有哪些中国人觉得稀松平常，外国人无法理解的事?](https://www.zhihu.com/question/435879884)
-1. [山东金矿爆炸事故已致 10 人遇难，责任如何界定？如何避免此类事故发生？](https://www.zhihu.com/question/441130462)
 1. [有什么是适合情侣间做的事情？](https://www.zhihu.com/question/23415480)
+1. [BBC 发布武汉一年前和现在对比视频，网友：为什么故意拍的这么破败。对此，你怎么看?](https://www.zhihu.com/question/440241502)
 1. [荷兰爆发大规模反封锁抗议，一新冠病毒检测中心遭烧毁，荷兰这是怎么了？](https://www.zhihu.com/question/441067774)
-1. [严格执行八小时工作制，双休，社会会变得怎样？](https://www.zhihu.com/question/401128014)
 1. [如何评价《王者荣耀》芈月新皮肤「白晶晶」？](https://www.zhihu.com/question/441100027)
-1. [《奇葩说》黄执中的发言听不下去，为什么？](https://www.zhihu.com/question/438585272)
-1. [如何看待2020 TapTap年度游戏大赏？](https://www.zhihu.com/question/440609958)
+1. [如何看待 1 月 26 日全球新冠确诊患者突破一亿？2021 年疫情会结束吗？](https://www.zhihu.com/question/441055229)
+1. [严格执行八小时工作制，双休，社会会变得怎样？](https://www.zhihu.com/question/401128014)
 1. [如何看待导游怒㨃参观汶川地震遗址嬉笑游客：请文明祭奠，再笑请你出去？](https://www.zhihu.com/question/441062228)
-1. [你觉得新冠疫情会持续多久才能彻底结束？](https://www.zhihu.com/question/435771594)
 1. [当老师进入教室发现黑板没擦，老师该怎么做最好？](https://www.zhihu.com/question/439153083)
+1. [近期疑似多只猫咪吃「go 九种肉」猫粮后死亡或生病，出问题的批次有哪些？猫咪主人能否索赔？](https://www.zhihu.com/question/380058906)
+1. [《奇葩说》黄执中的发言听不下去，为什么？](https://www.zhihu.com/question/438585272)
 1. [成都一试用期员工提前 30 天申请离职被指无效，还被要求承担下任员工培训费，你怎么看？该怎么维权？](https://www.zhihu.com/question/441091163)
-1. [如何解析《哥斯拉大战金刚》首部正式预告？](https://www.zhihu.com/question/441039069)
-1. [和一个女生聊天三个月了，还该继续吗？](https://www.zhihu.com/question/439898581)
-1. [项羽一生鲜有败绩，最后一仗为何是一败涂地？刘邦一败再败，却仍能恢复元气，项羽真的是有勇无谋的匹夫吗？](https://www.zhihu.com/question/438299652)
+1. [你觉得新冠疫情会持续多久才能彻底结束？](https://www.zhihu.com/question/435771594)
 1. [我如果往猫砂里拉屎，猫会帮我埋起来吗？](https://www.zhihu.com/question/26766288)
-1. [为什么现在总鼓励年轻人正面刚？](https://www.zhihu.com/question/440608876)
+1. [和一个女生聊天三个月了，还该继续吗？](https://www.zhihu.com/question/439898581)
+1. [2021 年 1 月 26 日，科比逝世一周年，你有什么想说的？](https://www.zhihu.com/question/441143598)
+1. [项羽一生鲜有败绩，最后一仗为何是一败涂地？刘邦一败再败，却仍能恢复元气，项羽真的是有勇无谋的匹夫吗？](https://www.zhihu.com/question/438299652)
+1. [如何解析《哥斯拉大战金刚》首部正式预告？](https://www.zhihu.com/question/441039069)
 1. [怎么看待热搜杨洋这次怼粉丝力挺化妆师？](https://www.zhihu.com/question/441140743)
-1. [为什么大家都开始买基金了？](https://www.zhihu.com/question/440302773)
 1. [2021 LPL 春季赛 EDG 为什么突然变强了？](https://www.zhihu.com/question/440684806)
-1. [有哪些超短却能让人笑抽的笑话？](https://www.zhihu.com/question/40173466)
 1. [你会因为什么放弃一个交往十几年的闺蜜？](https://www.zhihu.com/question/440304191)
-1. [如何把体脂降到15%?](https://www.zhihu.com/question/361928955)
 1. [为什么喜欢动漫的人往往不喜欢电视剧呢?](https://www.zhihu.com/question/439746443)
+1. [如何把体脂降到15%?](https://www.zhihu.com/question/361928955)
+1. [为什么现在总鼓励年轻人正面刚？](https://www.zhihu.com/question/440608876)
+1. [为什么大家都开始买基金了？](https://www.zhihu.com/question/440302773)
 1. [姚明放到现在小球时代能进入名人堂吗？](https://www.zhihu.com/question/440892240)
-1. [如何让5岁的孩子理解“不是她想要什么就必须得到或者拥有”?](https://www.zhihu.com/question/440219401)
-1. [学历真的要比能力重要吗？](https://www.zhihu.com/question/439822274)
+1. [在所有哺乳类动物中，为什么只有牛的乳汁成了人类社会中最常见的食品?](https://www.zhihu.com/question/440396733)
 1. [有哪些足不出户，能用十天左右时间掌握的新技能？](https://www.zhihu.com/question/369762095)
-1. [如何看待石家庄第三轮全员核酸检出阳性样本30例，多久可以解封？](https://www.zhihu.com/question/440730211)
-1. [春节过年，如何把「我很好」写在脸上？](https://www.zhihu.com/question/440698859)
+1. [如何让5岁的孩子理解“不是她想要什么就必须得到或者拥有”?](https://www.zhihu.com/question/440219401)
 1. [大家都用空气炸锅做过什么吃的呢？](https://www.zhihu.com/question/286863774)
-1. [子女「就地过年」，留守老人春节怎么过?](https://www.zhihu.com/question/440331426)
-1. [新手老师怎么做才能不凶学生又能管住学生？](https://www.zhihu.com/question/429786632)
-1. [有没有笑着笑着就哭了的句子？](https://www.zhihu.com/question/431226473)
+1. [学历真的要比能力重要吗？](https://www.zhihu.com/question/439822274)
+1. [春节过年，如何把「我很好」写在脸上？](https://www.zhihu.com/question/440698859)
 1. [那些追求HIFI的人是不是在为虚荣付款？](https://www.zhihu.com/question/433419706)
+1. [有没有笑着笑着就哭了的句子？](https://www.zhihu.com/question/431226473)
+1. [新手老师怎么做才能不凶学生又能管住学生？](https://www.zhihu.com/question/429786632)
+1. [如何评价联发科 1 月 20 日发布的天玑旗舰 5G 移动芯片——天玑 1200？](https://www.zhihu.com/question/440284486)
 1. [要多努力才能省考一次上岸？](https://www.zhihu.com/question/433209058)
 1. [有哪些让人觉得是人间绝句的诗句？](https://www.zhihu.com/question/321936867)
+1. [有人和分手很久的前任复合吗？](https://www.zhihu.com/question/346192910)
 1. [进入大学，渐渐开始讨厌自己的有些舍友，该怎样疏解这样的情绪？](https://www.zhihu.com/question/301575618)
-1. [2021 年 1 月 26 日，科比逝世一周年，你有什么想说的？](https://www.zhihu.com/question/441143598)
+1. [山东金矿爆炸事故已致 10 人遇难，责任如何界定？如何避免此类事故发生？](https://www.zhihu.com/question/441130462)
+1. [如何看待2020 TapTap年度游戏大赏？](https://www.zhihu.com/question/440609958)
+1. [如何看待石家庄第三轮全员核酸检出阳性样本30例，多久可以解封？](https://www.zhihu.com/question/440730211)
+1. [子女「就地过年」，留守老人春节怎么过?](https://www.zhihu.com/question/440331426)
 1. [如何看待美国华盛顿州发生警车碾压平民事件，还有哪些信息值得关注？](https://www.zhihu.com/question/441065641)
+1. [切尔西官宣解雇主帅兰帕德，你怎么看？](https://www.zhihu.com/question/441138394)
+1. [有什么句子受用终生?](https://www.zhihu.com/question/378654530)
+1. [南宁一女子 5 天吃 6 斤车厘子中毒，一夜「血便」 20 多次，吃车厘子过量有什么危险？](https://www.zhihu.com/question/441061857)
+1. [有哪些超短却能让人笑抽的笑话？](https://www.zhihu.com/question/40173466)
 1. [家长需要经常陪婴儿聊天吗？](https://www.zhihu.com/question/396990291)
 1. [为什么最近篮网的比赛打得都非常吃力?](https://www.zhihu.com/question/440944263)
 1. [是合适重要还是喜欢重要？](https://www.zhihu.com/question/433433093)
@@ -75,14 +81,12 @@
 1. [公共营养师已经取消了，现在应该怎么成为营养师，需要考什么证？](https://www.zhihu.com/question/55366252)
 1. [大家觉得美国经济会倒退多少年？](https://www.zhihu.com/question/438772689)
 1. [学生党家用打印机有哪些推荐？](https://www.zhihu.com/question/265997721)
-1. [切尔西官宣解雇主帅兰帕德，你怎么看？](https://www.zhihu.com/question/441138394)
 1. [有哪些让阅卷老师眼前一亮的作文题目？](https://www.zhihu.com/question/55469482)
 1. [如何评价中美「跪下的警察」对比图？](https://www.zhihu.com/question/441025450)
 1. [如何评价吴宇森监制的《三国志 · 战略版》品牌片《川流》？](https://www.zhihu.com/question/439470277)
 1. [有哪些直击你灵魂的句子？](https://www.zhihu.com/question/370580119)
 1. [有什么适合中学生使用的学习软件？](https://www.zhihu.com/question/29978072)
 1. [如何以“我把皇帝卖进了南风馆”为开头写个故事？](https://www.zhihu.com/question/439186570)
-1. [有什么句子受用终生?](https://www.zhihu.com/question/378654530)
 1. [mbti各类型黑化是怎样？](https://www.zhihu.com/question/345356566)
 1. [有什么好看的快穿文值得推荐?](https://www.zhihu.com/question/385365674)
 1. [如何把“对不起”三个字扩写成一百个字?](https://www.zhihu.com/question/429428461)
