--- a/archives/2021-02-06.md
+++ b/archives/2021-02-06.md
@@ -1,58 +1,65 @@
 # 2021-02-06
 
-共 182 条
+共 188 条
 
 <!-- BEGIN -->
-<!-- 最后更新时间 Sat Feb 06 2021 21:01:24 GMT+0800 (CST) -->
+<!-- 最后更新时间 Sat Feb 06 2021 22:01:23 GMT+0800 (CST) -->
 1. [如何看待 10 岁男孩因奶奶过年杀鸡而崩溃大哭，花一百万也要把鸡救活？](https://www.zhihu.com/question/442811742)
-1. [如何看待华为2020第四季度出货量大跌？](https://www.zhihu.com/question/442259690)
 1. [如何看待文章《另一个拉姆》讲述的记者马金瑜远嫁藏区，长期遭受家庭暴力和凌虐一事？](https://www.zhihu.com/question/443154151)
-1. [为何德克士越来越少了？](https://www.zhihu.com/question/321467749)
+1. [如何看待华为2020第四季度出货量大跌？](https://www.zhihu.com/question/442259690)
 1. [如何看待小年夜中央一套网络春晚上清华大学上海校友会表演的合唱节目《少年》？](https://www.zhihu.com/question/442905594)
+1. [为何德克士越来越少了？](https://www.zhihu.com/question/321467749)
 1. [怎么看待「人人影视字幕组」14 人被捕？](https://www.zhihu.com/question/442667356)
-1. [《斗罗大陆》真人版第一集拍得怎么样？](https://www.zhihu.com/question/442984903)
-1. [如何评价阿兰达瓦卓玛的外貌?](https://www.zhihu.com/question/270574192)
 1. [如何毁掉一部动漫？](https://www.zhihu.com/question/438413599)
-1. [建议多少岁结婚比较合适？](https://www.zhihu.com/question/441499184)
 1. [人类的极限寿命是多少岁？](https://www.zhihu.com/question/441028220)
-1. [是大部分动物都喜欢被摸头吗？](https://www.zhihu.com/question/442523187)
-1. [在婆婆家，我哄孩子睡觉，婆婆一家人包括老公没有等我先吃饭了，我应该生气吗？](https://www.zhihu.com/question/424718566)
-1. [为什么都建议要少发朋友圈?](https://www.zhihu.com/question/442335363)
-1. [如何看待劣迹艺人惩戒复出程序业内首次明确，会产生哪些影响？](https://www.zhihu.com/question/443005137)
-1. [你手里有哪些刘亦菲超美的照片？](https://www.zhihu.com/question/52207355)
-1. [如果《英雄联盟》可以看到全图视野，但只是个白银，会有职业队伍要吗？](https://www.zhihu.com/question/442642942)
+1. [如何评价阿兰达瓦卓玛的外貌?](https://www.zhihu.com/question/270574192)
 1. [和未来婆婆有了一定接触之后，不想嫁进他们家了，但是不舍得男友，过来人能给个建议吗?](https://www.zhihu.com/question/442344424)
+1. [在婆婆家，我哄孩子睡觉，婆婆一家人包括老公没有等我先吃饭了，我应该生气吗？](https://www.zhihu.com/question/424718566)
+1. [是大部分动物都喜欢被摸头吗？](https://www.zhihu.com/question/442523187)
+1. [你手里有哪些刘亦菲超美的照片？](https://www.zhihu.com/question/52207355)
+1. [建议多少岁结婚比较合适？](https://www.zhihu.com/question/441499184)
+1. [如果《英雄联盟》可以看到全图视野，但只是个白银，会有职业队伍要吗？](https://www.zhihu.com/question/442642942)
 1. [如果在西餐厅里，你提前预判到三秒后你对桌的小孩将要举枪杀你，此时你手里有一把餐刀，你会怎么做？](https://www.zhihu.com/question/432745799)
 1. [有哪些头像给人一看就感觉十分高级？](https://www.zhihu.com/question/441459020)
+1. [为什么都建议要少发朋友圈?](https://www.zhihu.com/question/442335363)
+1. [《斗罗大陆》真人版第一集拍得怎么样？](https://www.zhihu.com/question/442984903)
+1. [新出的国产大作《鬼谷八荒》好玩吗，你会购买吗？](https://www.zhihu.com/question/442267375)
 1. [如何看待青岛困难户家中摆「茅台」等高档酒引热议，街道称「困难户」并非「低保户」？这二者有什么区别吗？](https://www.zhihu.com/question/442993579)
-1. [如何看待沈阳月子会所 14 名新生儿感染病毒性肺炎一事，是否与管理不规范有关？](https://www.zhihu.com/question/443110974)
 1. [如何评价张柏芝在《乘风破浪的姐姐2》中的表现?她能凭借这个节目扭转口碑、翻红吗?](https://www.zhihu.com/question/440703299)
 1. [一个女生真的能忙到连一句消息都没时间回吗？](https://www.zhihu.com/question/441507795)
-1. [新出的国产大作《鬼谷八荒》好玩吗，你会购买吗？](https://www.zhihu.com/question/442267375)
 1. [欧洲城堡很多修在小山丘上，在中世纪如何解决饮水问题?](https://www.zhihu.com/question/317646235)
 1. [网友称很多女生总刷小红书、看微博网红，会幻想一夜暴富，所以和女生找话题就聊投资，你认同吗？](https://www.zhihu.com/question/443083852)
-1. [外国人来到中国旅行后是不是很容易对中国改观？](https://www.zhihu.com/question/437856634)
-1. [为什么感觉 iPhone12 有些地方不如人意，果粉却视而不见？](https://www.zhihu.com/question/437810551)
 1. [如何评价2020年抗美援朝题材电视剧《跨过鸭绿江》？](https://www.zhihu.com/question/436744258)
+1. [未婚夫把彩礼打我银行卡了，父母管我要说要帮我存起来，我该给吗？](https://www.zhihu.com/question/442994514)
+1. [什么叫做长相普通?](https://www.zhihu.com/question/351006112)
 1. [电视剧《天道》中丁元英为什么不和买早餐的阿姨计较那一块钱？](https://www.zhihu.com/question/64684581)
 1. [2021 春节档倒计时，你准备去看哪一部电影？](https://www.zhihu.com/question/441478509)
 1. [我想请问一下大三寒假才开始准备考研是不是晚了呀？](https://www.zhihu.com/question/435873246)
-1. [为什么绿米新品不支持米家？](https://www.zhihu.com/question/439382859)
+1. [如何看待《王者荣耀》主播韩涵与职业选手cat直播间内争执？](https://www.zhihu.com/question/442893588)
 1. [会不会在数学发展足够先进的时候，人们学100年也几乎达不到当时最前沿数学领域，使得数学无法继续发展?](https://www.zhihu.com/question/437041378)
-1. [菜鸟驿站转让费8万，一天收700件左右，寄15件左右，大佬们帮我分析下可不可以转？](https://www.zhihu.com/question/435352953)
-1. [如何看待教育部发布中华优秀传统文化进教材指南，要求高中历史课要让学生了解中医理论和武术武德？](https://www.zhihu.com/question/443008956)
-1. [《饥荒》新手怎么入门？](https://www.zhihu.com/question/53324225)
-1. [有没有什么好喝的牛奶推荐一下?](https://www.zhihu.com/question/441783315)
-1. [有什么适合独自一人观看的电影？](https://www.zhihu.com/question/31772302)
-1. [你们谈恋爱累吗？](https://www.zhihu.com/question/399471584)
+1. [学生党预算200以内，送男朋友情人节礼物，该送什么好呢？](https://www.zhihu.com/question/368681572)
+1. [如何看待沈阳月子会所 14 名新生儿感染病毒性肺炎一事，是否与管理不规范有关？](https://www.zhihu.com/question/443110974)
+1. [《原神》的抽卡有仓检系统吗？](https://www.zhihu.com/question/440397050)
+1. [一直单身一直爽是真的吗？](https://www.zhihu.com/question/330412814)
 1. [冬天怎么穿裙子好看?](https://www.zhihu.com/question/36487818)
 1. [如何评价高中地理教材里的丹霞同人形象？](https://www.zhihu.com/question/434559342)
-1. [回避型依恋的人适合和什么人在一起？](https://www.zhihu.com/question/365927236)
+1. [《饥荒》新手怎么入门？](https://www.zhihu.com/question/53324225)
+1. [你们谈恋爱累吗？](https://www.zhihu.com/question/399471584)
+1. [你收藏了哪些非常好的有道理的句子?](https://www.zhihu.com/question/434108029)
+1. [外国人来到中国旅行后是不是很容易对中国改观？](https://www.zhihu.com/question/437856634)
+1. [菜鸟驿站转让费8万，一天收700件左右，寄15件左右，大佬们帮我分析下可不可以转？](https://www.zhihu.com/question/435352953)
 1. [你看到曾经喜欢的人还会心动吗？](https://www.zhihu.com/question/439332766)
-1. [为什么有人觉得在简历上写 QQ 邮箱很掉分？](https://www.zhihu.com/question/384502791)
+1. [如何看待教育部发布中华优秀传统文化进教材指南，要求高中历史课要让学生了解中医理论和武术武德？](https://www.zhihu.com/question/443008956)
+1. [有没有什么好喝的牛奶推荐一下?](https://www.zhihu.com/question/441783315)
 1. [大学进不了学生会也当不上班干部很失败吗？](https://www.zhihu.com/question/299960912)
+1. [是哪一个瞬间让你的暗恋终止了？](https://www.zhihu.com/question/356186684)
+1. [为什么有人觉得在简历上写 QQ 邮箱很掉分？](https://www.zhihu.com/question/384502791)
+1. [如何看待劣迹艺人惩戒复出程序业内首次明确，会产生哪些影响？](https://www.zhihu.com/question/443005137)
+1. [为什么感觉 iPhone12 有些地方不如人意，果粉却视而不见？](https://www.zhihu.com/question/437810551)
+1. [为什么绿米新品不支持米家？](https://www.zhihu.com/question/439382859)
+1. [有什么适合独自一人观看的电影？](https://www.zhihu.com/question/31772302)
+1. [回避型依恋的人适合和什么人在一起？](https://www.zhihu.com/question/365927236)
 1. [有没有特别让你惊艳的古言，疯狂想安利给别人的那种？](https://www.zhihu.com/question/334390853)
-1. [一直单身一直爽是真的吗？](https://www.zhihu.com/question/330412814)
 1. [如何看出财务报表是否做假账？](https://www.zhihu.com/question/29442629)
 1. [如何以「上神剔我仙骨时，血溅了他一身」为开头写一个故事？](https://www.zhihu.com/question/435874686)
 1. [如何看待幼儿园作业开始拼家长、爸妈运用专业技能为孩子做幼儿园作业这种现象？](https://www.zhihu.com/question/442786792)
@@ -84,7 +91,6 @@
 1. [《原神》不氪、微氪能通关剧情，走完所有图吗？](https://www.zhihu.com/question/440405181)
 1. [如何评价《明日方舟》春节新限定干员「夕」？](https://www.zhihu.com/question/434458435)
 1. [如果让你给《哈利波特》加一个角色，你会怎么加？](https://www.zhihu.com/question/442971056)
-1. [是哪一个瞬间让你的暗恋终止了？](https://www.zhihu.com/question/356186684)
 1. [人努力的意义是什么呢？](https://www.zhihu.com/question/440274575)
 1. [有哪些神仙句子值得摘抄？](https://www.zhihu.com/question/432357037)
 1. [如何把握好高三剩下几十天，实现逆袭？](https://www.zhihu.com/question/389647857)
