--- a/archives/2021-02-08.md
+++ b/archives/2021-02-08.md
@@ -1,59 +1,68 @@
 # 2021-02-08
 
-共 154 条
+共 163 条
 
 <!-- BEGIN -->
-<!-- 最后更新时间 Mon Feb 08 2021 17:01:30 GMT+0800 (CST) -->
+<!-- 最后更新时间 Mon Feb 08 2021 18:01:44 GMT+0800 (CST) -->
 1. [维护《无职转生》的人所提出的「番剧好坏与角色三观无关」是否有问题？](https://www.zhihu.com/question/442868512)
 1. [2021 年腾讯阳光普照奖励每名员工 100 股，企业这类奖励对员工的激励作用有多大？](https://www.zhihu.com/question/443423122)
 1. [周大福、周生生、周大生、周六福、六福、金六福、金大福这些牌子有哪些区别？](https://www.zhihu.com/question/32209352)
 1. [假如你是一个很穷的吸血鬼，你怎么合法地取得足量的人血供你食用？](https://www.zhihu.com/question/443273171)
 1. [大人们都说年味淡了，可「年味」到底是什么？我们是否需要「拯救」年味？](https://www.zhihu.com/question/442835821)
-1. [为什么农民起家的开国皇帝都会有屠戮功臣之举，是因为他们内心的自卑感吗？](https://www.zhihu.com/question/19770873)
 1. [中国人口生育率断崖式下跌、人口负增长会让已经出生的 15 后、20 后的未来变得更轻松还是更艰难？](https://www.zhihu.com/question/443275766)
-1. [如何看待雀巢嘉宝等辅食疑似因金属含量超标被勒令下架？是真的吗？吃了的小孩怎么办？家里的囤货怎么处理？](https://www.zhihu.com/question/443271503)
-1. [如何看待《无职转生》于视频网站紧急下线？](https://www.zhihu.com/question/443359014)
-1. [如何看待江苏、安徽两省共同建设「南京都市圈」？](https://www.zhihu.com/question/443422699)
-1. [如何看待《进击的巨人》最终季第九集？](https://www.zhihu.com/question/443336588)
-1. [什么样的老年会很凄惨?](https://www.zhihu.com/question/442375719)
-1. [突然发现男朋友是隐形富豪是什么体验？](https://www.zhihu.com/question/271344191)
 1. [如何看待郭家铭离婚后称「我爱的女人是郝蕾」以及郝蕾的回应「也请你尊重和感恩你的男友」？](https://www.zhihu.com/question/443416093)
 1. [数学系的鄙视链是什么？](https://www.zhihu.com/question/353756542)
-1. [为什么在《无职转生》的原著存在争议的前提下，制作方还会投入如此大的资源来制作这部动画？](https://www.zhihu.com/question/442710946)
-1. [如何拒绝亲戚把自己家小孩送给我辅导？](https://www.zhihu.com/question/27775921)
-1. [如何看待印度高官炫耀称「若中国越界10次，印度肯定至少越界过50次」？](https://www.zhihu.com/question/443410219)
-1. [华为开除五名造谣员工，编造产品变动、业务出售等传言，如何看待这一消息？](https://www.zhihu.com/question/443419622)
+1. [如何看待《无职转生》于视频网站紧急下线？](https://www.zhihu.com/question/443359014)
+1. [如何看待江苏、安徽两省共同建设「南京都市圈」？](https://www.zhihu.com/question/443422699)
 1. [是否应该禁止文艺作品里出现违背现实道德伦理纲常的设定？创作者如何把握尺度？](https://www.zhihu.com/question/442471252)
-1. [据说九价人乳头瘤病毒（HPV）疫苗有很大的副作用，是真的吗？](https://www.zhihu.com/question/315444414)
+1. [为什么在《无职转生》的原著存在争议的前提下，制作方还会投入如此大的资源来制作这部动画？](https://www.zhihu.com/question/442710946)
+1. [突然发现男朋友是隐形富豪是什么体验？](https://www.zhihu.com/question/271344191)
+1. [如何看待印度高官炫耀称「若中国越界10次，印度肯定至少越界过50次」？](https://www.zhihu.com/question/443410219)
+1. [如何拒绝亲戚把自己家小孩送给我辅导？](https://www.zhihu.com/question/27775921)
+1. [如何看待《进击的巨人》最终季第九集？](https://www.zhihu.com/question/443336588)
+1. [华为开除五名造谣员工，编造产品变动、业务出售等传言，如何看待这一消息？](https://www.zhihu.com/question/443419622)
+1. [什么样的老年会很凄惨?](https://www.zhihu.com/question/442375719)
 1. [那些你身边年轻时疯狂攒钱的人最后都怎样了？](https://www.zhihu.com/question/408964456)
-1. [老公迷上了基金定投，说攒够钱，收益比上班工资多，我接受不了，怎么办?](https://www.zhihu.com/question/418202692)
-1. [如何看待酷友将红米K30 Pro屏幕刷新率成功超到77Hz？](https://www.zhihu.com/question/443240016)
-1. [王者峡谷中有哪些伤害不高，侮辱性极强的操作？](https://www.zhihu.com/question/442469641)
 1. [清华大学出来的工资有多高？](https://www.zhihu.com/question/373079772)
+1. [据说九价人乳头瘤病毒（HPV）疫苗有很大的副作用，是真的吗？](https://www.zhihu.com/question/315444414)
+1. [如何看待酷友将红米K30 Pro屏幕刷新率成功超到77Hz？](https://www.zhihu.com/question/443240016)
 1. [为什么越来越多的中小城市也在建地铁？](https://www.zhihu.com/question/43550635)
-1. [怎样看待华为宣称要把96线激光雷达做到200美金以内？](https://www.zhihu.com/question/433267289)
+1. [王者峡谷中有哪些伤害不高，侮辱性极强的操作？](https://www.zhihu.com/question/442469641)
+1. [过年回家被亲戚打探工资，不想告诉又不想显得很小气，该怎么办？](https://www.zhihu.com/question/443338258)
 1. [25岁不甘于现状，却又觉得无力改变怎么办？](https://www.zhihu.com/question/442968097)
 1. [有什么是你穿过高跟鞋后才知道的？](https://www.zhihu.com/question/442307925)
-1. [在普通人眼里，奥迪A6L和宝马5系哪个更有排面？](https://www.zhihu.com/question/422426584)
-1. [有哪些悄悄发送却能“惊艳所有人”的沙雕文案？](https://www.zhihu.com/question/443152285)
-1. [特斯拉工作和蔚来工作选哪个？](https://www.zhihu.com/question/440648048)
-1. [大家有可考的有含金量的证书推荐吗 ？](https://www.zhihu.com/question/428848820)
-1. [从地理学上讲，原神的地图合不合理？](https://www.zhihu.com/question/442860960)
-1. [买人生第一辆车后多久开始后悔？](https://www.zhihu.com/question/354985985)
+1. [怎样看待华为宣称要把96线激光雷达做到200美金以内？](https://www.zhihu.com/question/433267289)
 1. [sin(-2x) 的导数怎么求？](https://www.zhihu.com/question/431864288)
-1. [如何看待青岛一位父亲 14 年来收藏两个孩子书本重达 800 斤？你家如何「记录成长」？](https://www.zhihu.com/question/443400556)
-1. [坚持晨跑有用吗？](https://www.zhihu.com/question/436666369)
-1. [作为一位高中生过度沉迷于周深影响了成绩该怎么办？](https://www.zhihu.com/question/443324512)
+1. [有哪些悄悄发送却能“惊艳所有人”的沙雕文案？](https://www.zhihu.com/question/443152285)
+1. [从地理学上讲，原神的地图合不合理？](https://www.zhihu.com/question/442860960)
 1. [小学的成绩有很大的欺骗性，到了初中就会有很多的学生掉队，是真的吗？](https://www.zhihu.com/question/433616847)
-1. [单机游戏《戴森球计划》从立项一开始就将优化放在很高的位置，为什么没有「过早优化是万恶之源」的问题？](https://www.zhihu.com/question/443301965)
-1. [iPhone 有哪些非常有必要下载的 App？](https://www.zhihu.com/question/28306141)
-1. [如何看待陌陌给正式员工每人发一部 iPhone 12 Pro Max ？你认为最实用的年终福利是什么？](https://www.zhihu.com/question/443424831)
-1. [过年回家被亲戚打探工资，不想告诉又不想显得很小气，该怎么办？](https://www.zhihu.com/question/443338258)
-1. [年味是否注定与乡土气息绑定？城市化的发展是不是多多少少稀释了年味？](https://www.zhihu.com/question/443292176)
-1. [为什么独处的时候经常会回忆各种挫折、尴尬的瞬间，并自我贬低？](https://www.zhihu.com/question/36679924)
+1. [在普通人眼里，奥迪A6L和宝马5系哪个更有排面？](https://www.zhihu.com/question/422426584)
+1. [如何看待青岛一位父亲 14 年来收藏两个孩子书本重达 800 斤？你家如何「记录成长」？](https://www.zhihu.com/question/443400556)
+1. [老公迷上了基金定投，说攒够钱，收益比上班工资多，我接受不了，怎么办?](https://www.zhihu.com/question/418202692)
+1. [有哪些电视剧的台词让你耳目一新？](https://www.zhihu.com/question/430075782)
 1. [如何看待 Intel 11代处理器对比 Apple M1 的 PPT?](https://www.zhihu.com/question/443378255)
+1. [为什么独处的时候经常会回忆各种挫折、尴尬的瞬间，并自我贬低？](https://www.zhihu.com/question/36679924)
+1. [如何看待陌陌给正式员工每人发一部 iPhone 12 Pro Max ？你认为最实用的年终福利是什么？](https://www.zhihu.com/question/443424831)
+1. [年味是否注定与乡土气息绑定？城市化的发展是不是多多少少稀释了年味？](https://www.zhihu.com/question/443292176)
 1. [如何评价动画电影《攻壳机动队 2：无罪》？](https://www.zhihu.com/question/20641339)
 1. [如何激怒一名风光摄影爱好者？](https://www.zhihu.com/question/443323344)
+1. [有没有能甜到打滚的小说？](https://www.zhihu.com/question/440275476)
+1. [如何看待澳大利亚政府将我国发布的留学预警称为「散布虚假消息」？](https://www.zhihu.com/question/443409835)
+1. [超市20元一只的烤鸡能吃吗？](https://www.zhihu.com/question/442735401)
+1. [段誉跟虚竹结拜的时候，在乔峰不知情的情况下把他也算在内了，这样好吗？](https://www.zhihu.com/question/443268531)
+1. [给异地恋女朋友寄什么东西好一点?](https://www.zhihu.com/question/376029422)
+1. [各位有没有虐到心肝疼的剧或小说推荐 ？](https://www.zhihu.com/question/434264909)
+1. [言语理解怎样才能有质的飞跃？](https://www.zhihu.com/question/56011912)
+1. [哪部电影对你影响最深，它在哪些方面曾改变或影响过你的现实生活？](https://www.zhihu.com/question/443275018)
+1. [为什么农民起家的开国皇帝都会有屠戮功臣之举，是因为他们内心的自卑感吗？](https://www.zhihu.com/question/19770873)
+1. [如何看待雀巢嘉宝等辅食疑似因金属含量超标被勒令下架？是真的吗？吃了的小孩怎么办？家里的囤货怎么处理？](https://www.zhihu.com/question/443271503)
+1. [特斯拉工作和蔚来工作选哪个？](https://www.zhihu.com/question/440648048)
+1. [大家有可考的有含金量的证书推荐吗 ？](https://www.zhihu.com/question/428848820)
+1. [买人生第一辆车后多久开始后悔？](https://www.zhihu.com/question/354985985)
+1. [坚持晨跑有用吗？](https://www.zhihu.com/question/436666369)
+1. [作为一位高中生过度沉迷于周深影响了成绩该怎么办？](https://www.zhihu.com/question/443324512)
+1. [单机游戏《戴森球计划》从立项一开始就将优化放在很高的位置，为什么没有「过早优化是万恶之源」的问题？](https://www.zhihu.com/question/443301965)
+1. [iPhone 有哪些非常有必要下载的 App？](https://www.zhihu.com/question/28306141)
 1. [你们可以接受谈恋爱不公开吗？](https://www.zhihu.com/question/440939084)
 1. [为什么目前智能家居不用 ZigBee 反而热衷于蓝牙和 Wi-Fi？](https://www.zhihu.com/question/439169826)
 1. [虾米音乐关停后，替代品哪个更接近虾米的风格？](https://www.zhihu.com/question/437946909)
