--- a/archives/2021-02-17.md
+++ b/archives/2021-02-17.md
@@ -1,58 +1,67 @@
 # 2021-02-17
 
-共 144 条
+共 150 条
 
 <!-- BEGIN -->
-<!-- 最后更新时间 Wed Feb 17 2021 20:01:45 GMT+0800 (CST) -->
+<!-- 最后更新时间 Wed Feb 17 2021 21:02:35 GMT+0800 (CST) -->
 1. [如果《你好，李焕英》票房破30亿，对于导演和演员贾玲意味着什么？](https://www.zhihu.com/question/444531706)
 1. [西安咸阳机场扩建，发现 3500 余座古墓，具有哪些意义和价值？](https://www.zhihu.com/question/444692867)
 1. [你们学校的校草帅到什么程度？](https://www.zhihu.com/question/290011743)
 1. [为什么很多人不喜欢《刺杀小说家》？影片质量到底怎么样？](https://www.zhihu.com/question/444097573)
-1. [过年给爸爸一千红包，给妈妈买了八百的化妆品所以只包了二百红包，我这样做不对吗？](https://www.zhihu.com/question/444298288)
-1. [到底是谁毁了小马云（范小勤）？](https://www.zhihu.com/question/443916863)
-1. [看完《你好李焕英》后你有何感想？](https://www.zhihu.com/question/441478426)
-1. [1+0.1+0.01+0.001+0.0001... 一直下去会在实际中到达 2 吗？](https://www.zhihu.com/question/444218811)
-1. [如何看待沈腾超过黄渤，成为中国影史票房第一演员？](https://www.zhihu.com/question/444832316)
-1. [如何评价《无职转生》动画第六集？](https://www.zhihu.com/question/443593387)
-1. [如何看待妇产科的陈大夫为证明麻醉药「一捂就晕」，拿自己做实验后报警自刀?](https://www.zhihu.com/question/444693829)
-1. [请问计算机专业到了35岁真的会失业吗？](https://www.zhihu.com/question/444397279)
 1. [导师告诉我王水没毒，别害怕化学实验，咋办？](https://www.zhihu.com/question/444497836)
-1. [《唐人街探案4》怎么拍才能逆转《唐探3》剧情的平庸？](https://www.zhihu.com/question/444403589)
+1. [如何看待沈腾超过黄渤，成为中国影史票房第一演员？](https://www.zhihu.com/question/444832316)
+1. [看完《你好李焕英》后你有何感想？](https://www.zhihu.com/question/441478426)
 1. [89平小三居舒服吗？](https://www.zhihu.com/question/394899251)
-1. [《唐人街探案》里思诺为什么要杀死小男孩？](https://www.zhihu.com/question/38866953)
-1. [在《你好，李焕英》中冷特这个角色出现的意义是什么？](https://www.zhihu.com/question/444145626)
 1. [为什么胡亥、雍正伪造一个诏书就能当皇帝，那么别的皇子也可以伪造诏书啊，这不就乱套了吗？](https://www.zhihu.com/question/443799152)
+1. [请问计算机专业到了35岁真的会失业吗？](https://www.zhihu.com/question/444397279)
+1. [到底是谁毁了小马云（范小勤）？](https://www.zhihu.com/question/443916863)
+1. [如何看待妇产科的陈大夫为证明麻醉药「一捂就晕」，拿自己做实验后报警自刀?](https://www.zhihu.com/question/444693829)
+1. [《唐人街探案》里思诺为什么要杀死小男孩？](https://www.zhihu.com/question/38866953)
+1. [1+0.1+0.01+0.001+0.0001... 一直下去会在实际中到达 2 吗？](https://www.zhihu.com/question/444218811)
 1. [给你360块人民币，你是购买《赛博朋克2077》还是《魔兽世界》的半年年卡？](https://www.zhihu.com/question/435938868)
-1. [《英雄联盟》哪个英雄能守住三路超级兵加大龙 BUFF？](https://www.zhihu.com/question/388623994)
+1. [在《你好，李焕英》中冷特这个角色出现的意义是什么？](https://www.zhihu.com/question/444145626)
 1. [杭州和广州哪个城市更宜居？](https://www.zhihu.com/question/63052563)
 1. [看过冷军的一些画，一直有个疑惑：绘画的意义何在？难道就是要做一个行走的照相机吗？](https://www.zhihu.com/question/443195868)
-1. [牙齿正畸的朋友们后悔了吗？](https://www.zhihu.com/question/308980503)
 1. [上清北真的可以改变一生吗？](https://www.zhihu.com/question/300213917)
-1. [如何看待刘昊然这个人？](https://www.zhihu.com/question/440653826)
+1. [如何评价《无职转生》动画第六集？](https://www.zhihu.com/question/443593387)
+1. [《英雄联盟》哪个英雄能守住三路超级兵加大龙 BUFF？](https://www.zhihu.com/question/388623994)
+1. [牙齿正畸的朋友们后悔了吗？](https://www.zhihu.com/question/308980503)
 1. [如何评价森海塞尔决定出售其消费者业务？](https://www.zhihu.com/question/444861091)
 1. [认识不久的男朋友找我借钱，妈妈知道了不让怎么办？](https://www.zhihu.com/question/61523392)
-1. [20.22.25.30.37.（）后边的这个数到底是多少？](https://www.zhihu.com/question/444440382)
 1. [女孩子什么品质最吸引男生？](https://www.zhihu.com/question/313462176)
-1. [《小小梦魇2》中结局小六为什么会放手？](https://www.zhihu.com/question/444065731)
-1. [为什么电竞需要天赋极高？](https://www.zhihu.com/question/438485421)
-1. [如何看待京东物流向港交所递交 IPO 申请？你看好京东物流的前景吗？](https://www.zhihu.com/question/444831629)
+1. [20.22.25.30.37.（）后边的这个数到底是多少？](https://www.zhihu.com/question/444440382)
+1. [如何看待刘昊然这个人？](https://www.zhihu.com/question/440653826)
 1. [减肥对侧脸颜值有多大影响？](https://www.zhihu.com/question/68223529)
 1. [刚离职，老板群里因发工资发了个红包，我抢了28.53，他发了“离职了抢什么红包”，该怎么回？](https://www.zhihu.com/question/406777225)
-1. [有哪些看完就想秒转朋友圈的沙雕文案？](https://www.zhihu.com/question/444434920)
+1. [过年给爸爸一千红包，给妈妈买了八百的化妆品所以只包了二百红包，我这样做不对吗？](https://www.zhihu.com/question/444298288)
+1. [《唐人街探案4》怎么拍才能逆转《唐探3》剧情的平庸？](https://www.zhihu.com/question/444403589)
 1. [年龄大了，越来越讨厌二次元了，这是为什么呢？](https://www.zhihu.com/question/444458515)
+1. [大年初二，我回娘家，我爸爸妈妈给我弟弟的孩子1000元压岁钱，给我的孩子100元压岁钱，我该怎么办？](https://www.zhihu.com/question/444673444)
 1. [高一学生喜欢上了摄影，用的是 r6，总有人觉得我技术配不上这么贵的机子，我该怎么办？](https://www.zhihu.com/question/444283427)
+1. [为什么安卓厂商几乎放弃了小屏市场？](https://www.zhihu.com/question/433419730)
+1. [有什么好看又很快可以看完的短篇病娇文？](https://www.zhihu.com/question/377396916)
+1. [你们读书是怎么发奋努力起来的?](https://www.zhihu.com/question/292086933)
+1. [万历朝鲜之战后，明朝可不可以灭掉日本？](https://www.zhihu.com/question/442606900)
+1. [如果活得很累，还要坚持下去吗？](https://www.zhihu.com/question/443682392)
+1. [新高考选科，生物还是地理?](https://www.zhihu.com/question/444389020)
+1. [如何看待京东物流向港交所递交 IPO 申请？你看好京东物流的前景吗？](https://www.zhihu.com/question/444831629)
+1. [有哪些看完就想秒转朋友圈的沙雕文案？](https://www.zhihu.com/question/444434920)
+1. [怎么才能教育出一个自信的孩子？](https://www.zhihu.com/question/436119718)
+1. [购买Minecraft正版账号是有意义的吗？](https://www.zhihu.com/question/444106311)
+1. [《和平精英》变味了吗？](https://www.zhihu.com/question/377129398)
+1. [把死去的宠物做成标本好吗?](https://www.zhihu.com/question/444507603)
+1. [你有什么压箱底的笑话？](https://www.zhihu.com/question/434809137)
+1. [网络上有哪些惊艳到你的句子?](https://www.zhihu.com/question/435377262)
+1. [《秦时明月6》为什么这么差了？](https://www.zhihu.com/question/442041713)
+1. [有一个病娇男友(老公)是一种怎样的体验?](https://www.zhihu.com/question/386851696)
+1. [《小小梦魇2》中结局小六为什么会放手？](https://www.zhihu.com/question/444065731)
+1. [为什么电竞需要天赋极高？](https://www.zhihu.com/question/438485421)
 1. [高三能努力到什么程度？](https://www.zhihu.com/question/442768912)
 1. [考研英语的复习分为几个阶段，每阶段的重点工作是什么？](https://www.zhihu.com/question/369773316)
-1. [购买Minecraft正版账号是有意义的吗？](https://www.zhihu.com/question/444106311)
-1. [如果活得很累，还要坚持下去吗？](https://www.zhihu.com/question/443682392)
 1. [孕妇可以用化妆品、护肤品吗？](https://www.zhihu.com/question/265971860)
 1. [你知道有哪些好鞋不贵系列吗？](https://www.zhihu.com/question/293379554)
-1. [把死去的宠物做成标本好吗?](https://www.zhihu.com/question/444507603)
-1. [《和平精英》变味了吗？](https://www.zhihu.com/question/377129398)
-1. [怎么才能教育出一个自信的孩子？](https://www.zhihu.com/question/436119718)
 1. [数列「1，2，2，3，3，3，...」的通项公式是什么？](https://www.zhihu.com/question/25045244)
 1. [如何减掉腰腹部的脂肪？](https://www.zhihu.com/question/33277243)
-1. [《秦时明月6》为什么这么差了？](https://www.zhihu.com/question/442041713)
 1. [怎样忘掉过去的人和事？](https://www.zhihu.com/question/437350997)
 1. [初中生笔记记成这样可以吗？](https://www.zhihu.com/question/444377161)
 1. [美国存在感最低的州是哪一个？](https://www.zhihu.com/question/433421382)
@@ -64,10 +73,8 @@
 1. [读高中的妹妹一直坚持想学表演以后进入娱乐圈，父母和我都不同意她学表演，她就是不听，怎么才能劝住她？](https://www.zhihu.com/question/444700451)
 1. [坚持喝牛奶有什么好处？](https://www.zhihu.com/question/28325412)
 1. [如果宋高宗支持岳飞北伐，岳飞能收回北宋的领土吗?](https://www.zhihu.com/question/444059876)
-1. [有一个病娇男友(老公)是一种怎样的体验?](https://www.zhihu.com/question/386851696)
 1. [《还珠格格》里面，皇帝是更喜欢小燕子还是更喜欢紫薇一些？](https://www.zhihu.com/question/39864864)
 1. [你们相信冥冥之中注定的缘分吗？](https://www.zhihu.com/question/322148297)
-1. [你有什么压箱底的笑话？](https://www.zhihu.com/question/434809137)
 1. [如果你手机里的第7张照片在你洗澡的时候冲进来，会发生什么？](https://www.zhihu.com/question/405633395)
 1. [你记忆中最温暖的一次拥抱发生在什么时候？背后有什么故事？](https://www.zhihu.com/question/444394694)
 1. [有没有什么很干净的文案？](https://www.zhihu.com/question/442361063)
@@ -81,7 +88,6 @@
 1. [π的1997次方的小数点后1997位是多少？](https://www.zhihu.com/question/444207973)
 1. [设计师设计的依据是什么？](https://www.zhihu.com/question/410685402)
 1. [婴儿0-12个月每个阶段最值得买的玩具有哪几款？](https://www.zhihu.com/question/35154130)
-1. [网络上有哪些惊艳到你的句子?](https://www.zhihu.com/question/435377262)
 1. [为什么许多年轻人不喜欢回农村过年了？](https://www.zhihu.com/question/443921785)
 1. [喜欢一个男孩子，经常找他聊天，但通常自己发很多条，他就只有一个表情，也没有很快回我，我是不是没希望了？](https://www.zhihu.com/question/423885375)
 1. [《甄嬛传》结尾封皇后为皇后是什么意思？](https://www.zhihu.com/question/440187489)
